# astar_omni_holonomic_motion

./: .gitignore  .gitlab-ci.yml  Doxyfile  Omar_Walid_zal_task.html  README.html  README.md
src/astar/: CMakeLists.txt  package.xml
src/astar/cfg/: WaypointFollower.cfg
src/astar/ros/: astarPath.py
src/astar/scripts/: astarCode.py  astarTest.py  cell.py  guiTk.py  mapPublisher.py  markerPublisher.py  occupancyGrid.py  omniController.py  omniOdometry.py  robotFootprint.py  velocityController.py  velocityProfile.py  waypointCommands.py
src/astar_algorithm/: CMakeLists.txt  package.xml
src/astar_algorithm/astar_algorithm/: cell.py
src/astar_algorithm/launch/: astar.launch.py
src/astar_algorithm/scripts/: astarPath.py
src/astar_algorithm/scripts/Pathfinding_Visualizer/: README.md  main.py
src/docker/: Dockerfile
src/map_publisher/: CMakeLists.txt  package.xml
src/map_publisher/launch/: map_publisher.launch.py
src/map_publisher/scripts/: mapPublisher.py  robotFootprint.py
src/navigation_control/: CMakeLists.txt  package.xml
src/navigation_control/launch/: navigation_control.launch.py
src/navigation_control/scripts/: waypointCommands.py
src/omni_bot/: CMakeLists.txt  package.xml
src/omni_bot/config/: astar.rviz
src/omni_bot/launch/: gazebo.launch  gazebo.launch.py  robot_state_publisher.launch.py  spawn_robot.launch.py  test.launch.py  zal_task.launch.py
src/omni_bot/log/: latest_build
src/omni_bot/scripts/: omniController.py  robotFootprint.py  waypointCommands.py
src/omni_bot/urdf/: main.xacro  plugins.gazebo
src/omni_msgs/: CMakeLists.txt  package.xml
src/omnidrive-gazebo-ros-control/omni_bot/: CMakeLists.txt  package.xml
src/omnidrive-gazebo-ros-control/omni_bot/urdf/: main.xacro
