<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_msgs</name>
  <version>0.0.1</version>
  <maintainer email="omarwalid@outlook.com">Omar Walid</maintainer>
  <description>
    3D models of the omni_msgs for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <author email="omarwalid@outlook.com">Omar Walid</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
    
  </export>
</package>
